@@ -31,7 +31,7 @@
       <td class='[% class %]'>[% IF d.fixed %]Fixed[% ELSE %]Flexible ([% duration(d.flex_range * 60) %])[% END %]</td>
       <td class='[% class %]'>[% duration(d.duration * 60) %]</td>
       <td class='[% class %]'>[% IF escape_html_tags %][% escape_html(d.comment) %][% ELSE %][% d.comment %][% END %]</td>
-      <td class='[% class %]'><a href='extinfo.cgi?type=6&amp;recurring=edit&amp;host=[% d.host | uri %][% IF type == 'service' %]&amp;service=[% d.service | uri %][% END %]'><img src='[% url_prefix %]thruk/themes/[% theme %]/images/edit.png' border="0" alt='change / delete recurring duration' title='change / delete recurring duration' width="16" height="16"></a></td>
+      <td class='[% class %]'><a href='extinfo.cgi?type=6&amp;nr=[% IF d.exists('nr'); d.nr; END %]&amp;recurring=edit&amp;host=[% d.host | uri %][% IF type == 'service' %]&amp;service=[% d.service | uri %][% END %]'><img src='[% url_prefix %]thruk/themes/[% theme %]/images/edit.png' border="0" alt='change / delete recurring duration' title='change / delete recurring duration' width="16" height="16"></a></td>
     </tr>
     [% END %]
     [% IF count == 0 %]
