@@ -18,6 +18,7 @@
 <form action="extinfo.cgi" method="POST">
 <input type="submit" name="send" value="save" style="display:none"><!-- make enter submit the form -->
 <input type="hidden" name="recurring" value="save">
+<input type="hidden" name="old_nr" value="[% IF rd.exists('nr'); rd.nr; END %]">
 <input type="hidden" name="old_host" value="[% rd.host %]">
 [% IF task == 'add_service' OR (task == 'edit' AND rd.service ) %]
 <input type="hidden" name="old_service" value="[% rd.service %]">
